# ats-plugins

./: meson.build
audioanalysis/src/: Makefile  audiodata.h  error.c  error.h  gstaudioanalysis.c  gstaudioanalysis.h
common/: array.h
gst/: meson.build
gst/analysis/: common.h  gstanalysis.c  gstatsanalysis.c  gstaudioanalysis.c  gstaudioanalysis.h  gstaudioanalysis_priv.h  gstvideoanalysis.c  gstvideoanalysis.h  gstvideoanalysis_priv.h  meson.build
gst/rendering/: gldrawing.c  gldrawing.h  gstatsrendering.c  gstglsoundbar.c  gstglsoundbar.h  meson.build
videoanalysis/src/: Makefile  analysis.h  error.c  error.h  gstvideoanalysis.c  gstvideoanalysis.h
